--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/logo.png
+    # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -56,17 +56,25 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+        - family: LibreBaskerVille
+          fonts:
+            - asset: assets/fonts/LibreBaskerville-Regular.ttf
+              weight: 400
+            - asset: assets/fonts/LibreBaskerville-Bold.ttf
+              weight: 700
+        - family: OpenSans
+          fonts:
+            - asset: assets/fonts/OpenSans-Light.ttf
+              weight: 300
+            - asset: assets/fonts/OpenSans-Regular.ttf
+              weight: 400
+            - asset: assets/fonts/OpenSans-SemiBold.ttf
+              weight: 600
+            - asset: assets/fonts/OpenSans-Bold.ttf
+              weight: 700
+            - asset: assets/fonts/OpenSans-ExtraBold.ttf
+              weight: 800
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
