--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>1068101092642-t1da7pl56umug7mhtdn52joh9ue7sc16.apps.googleusercontent.com</string>
+	<string>984517045711-9b7loa8on1al2qcadkpf6hh40nvlb17i.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.1068101092642-t1da7pl56umug7mhtdn52joh9ue7sc16</string>
+	<string>com.googleusercontent.apps.984517045711-9b7loa8on1al2qcadkpf6hh40nvlb17i</string>
 	<key>API_KEY</key>
-	<string>AIzaSyC7sV8goh6sC_4t7dXHqVSwooaaFqDbOa4</string>
+	<string>AIzaSyB_nwsBmeP7xS7T3g3QTOTON5lrFbXFug4</string>
 	<key>GCM_SENDER_ID</key>
-	<string>1068101092642</string>
+	<string>984517045711</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.shikami.newstand</string>
+	<string>com.potters.newstand</string>
 	<key>PROJECT_ID</key>
-	<string>newstand-9291d</string>
+	<string>newstand-app</string>
 	<key>STORAGE_BUCKET</key>
-	<string>newstand-9291d.appspot.com</string>
+	<string>newstand-app.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +29,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1068101092642:ios:02f81e11ae671bd4aed17b</string>
+	<string>1:984517045711:ios:a7ab4223ca01f176f576ba</string>
 	<key>DATABASE_URL</key>
-	<string>https://newstand-9291d.firebaseio.com</string>
+	<string>https://newstand-app.firebaseio.com</string>
 </dict>
 </plist>
