--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,8 @@
 bewellapp_keystore.jks.encrypted
 bewellapp_keystore.jks
 /android/key.properties
-
+ios/Runner/GoogleService-Info.plist
+android/app/google-services.json
 
 # Web related
 lib/generated_plugin_registrant.dart
