--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -17,11 +17,12 @@ jobs:
             flutter pub get            
             flutter analyze
             flutter test --coverage
-      # - name: Upload coverage to Codecov
-      #   uses: codecov/codecov-action@v1
-      #   with:
-      #     token: ${{ secrets.CODECOV_TOKEN }}
-      #     file: coverage/lcov.info
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: coverage/lcov.info
+
       # - name: Run retrieve coverage information    
       #   run: |
       #     sudo apt-get -qq update
